# Imfit-old

./: .autotools  .cproject  .gitignore  .project  Makefile.am  README  bootstrap_errors.cpp  configure.ac  do_imfit_tests  do_makeimage_tests
src/: DESolver.cpp  DESolver.h  Makefile.am  add_functions.cpp  add_functions.h  bootstrap_errors.cpp  convolver.cpp  convolver.h  diff_evoln_fit.cpp  imfit_main.cpp  levmar_fit.cpp  levmar_fit.h  makeimage_main.cpp  model_object.cpp  model_object.h  nmsimplex_fit.cpp  print_results.cpp
